--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section>
         <div id="title">
           <h1>jwilkins.github.com</h1>
-          <p></p>
+          <p><a href="https://github.com/jwilkins/jwilkins.github.com/captcha.pdf">Strong Captcha Guidelines</a></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/jwilkins">jwilkins</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
